chore(settings): remove AgentPresetOnboarding模块相关代码
- 删除AgentPresetOnboardingCatalog记录类及其校验逻辑
- 移除AgentPresetOnboardingCommands中生成幂等键的方法
- 删除AgentPresetOnboardingConflictException异常类
- 移除AgentPresetOnboardingDialog对话框及其全部UI和事件处理实现
- 文档更新：标记旧ADR被新ADR替代，补充v6验收矩阵详细说明和现状
- 确认更新文档中提供了完整的当前版本状态和各模块通过情况记录